--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 }
 
 header{
-  background-color:#233237;
+  background-color:white;
   height: 9%;
   display: flex;
 	position: fixed;
@@ -282,7 +282,7 @@ p {
 	width:80%;
 	height:150%;
 	list-style:none;
-	margin-top: -5%;
+	margin-top: -4%;
 	position: relative;
 }
 
