--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import "compass/css3";
 
 html, body {
-    background-color: white;
+    background-color: #233237;
     color:white;
     font-family: 'Athiti', sans-serif;
     width: 100%;
@@ -282,7 +282,7 @@ p {
 	width:80%;
 	height:150%;
 	list-style:none;
-	margin-top: -4%;
+	margin-top: -4.5%;
 	position: relative;
 }
 
