--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 @import "compass/css3";
 
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+@import url('https://fonts.googleapis.com/css?family=Gochi+Hand|Roboto:700');
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+
+@import url(https://fonts.googleapis.com/css?family=Yellowtail);
+
 html, body {
     background-color: white;
     color:white;
     font-family: 'Athiti', sans-serif;
     width: 100%;
+		height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -88,9 +97,11 @@ a{
 } 
 
 h1 {
+	font-family: 'Gochi Hand', cursive;
 	color:#233237;
   padding-top: 10px;
-  font-size: 10.0em;
+  font-size: 7.0em;
+	text-align: center;
 }
 
 h2 {
@@ -117,8 +128,11 @@ p {
   top: 250px;
 }
 
-#name {
-  margin-top: 10px;
+.name {
+	 font-family: 'Athiti', sans-serif; 
+	padding-top: -10px;
+	padding-bottom: 80px;
+	padding-left: 10%;
   text-align: center;
   font-weight: bold;
   font-size: 8em;
@@ -140,6 +154,7 @@ p {
         }           
 
 	.nav ul {
+		font-family:'Gochi Hand', cursive;
 			margin-left:30px;
 			width: 180px;
 			padding: 5px 0;
@@ -164,6 +179,7 @@ p {
 
 	.nav a {
 			color: #233237;
+		font-family:'Gochi Hand', cursive;
 			display: block;
 			padding: 5px 5px 5px 50px;
 			text-align: left;
@@ -179,6 +195,7 @@ p {
 	}
 
 	.nav ul:hover li {
+			
 			color:#233237;
 			display: block;
 			margin: 0 0 5px;
@@ -213,9 +230,13 @@ p {
   50% { border-color: white }
 }
 
-#Form{
+.Form{
+	padding-left: 10%;
+	 font-size: 28px;
+	 font-family: 'Gochi Hand', cursive;
   text-align: center;
   color:#233237;
+	margin-top: -10px;
 }
 
  
@@ -241,13 +262,19 @@ p {
   }
 	
  .year {
+	 font-family: 'Gochi Hand', cursive;
+	 color:#233237;
     max-width: 6em;
     margin: 0 auto 1em;
-    padding: 0.5em;
+	 padding-top: 100px;
     text-align: center;
     position: relative;
     clear: both;
   }
+
+p{
+	font-family: 'Gochi Hand', cursive;
+}
 
 .quali {
   font-size: 30px;
@@ -282,7 +309,7 @@ p {
 	width:80%;
 	height:150%;
 	list-style:none;
-	margin-top: -4.5%;
+	margin-top: -5%;
 	position: relative;
 }
 
@@ -292,7 +319,7 @@ p {
 	opacity: .8;
 	width:80%;
 	height:100%;
-	margin-left:6%;
+	margin-left:7%;
 	border-radius: 20px;
   position: relative;
   text-align: center;
@@ -301,11 +328,75 @@ p {
 	list-style:none;
 }
 
+.ac{
+	font-family: 'Gochi Hand', cursive;
+  font-size: 35px;
+  color: #233237;
+  list-style: none;
+  text-align:center;
+  background: #E9E7DA ;
+  border-bottom-right-radius: 18px;
+  border-bottom-left-radius: 18px;
+  border-top-right-radius: 18px;
+  border-top-left-radius: 18px;
+  width: 25%;
+  margin-left:37%;
+  margin-top: 12%;
+  text-align: center;
+}
+
+.ac1{
+	font-family: 'Athiti', sans-serif;
+  font-weight: bold;
+	font-size: 28px;
+  color: #233237;
+  margin-bottom: -30px;
+	margin-left:5%;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-top: 50px;
+  text-align: center;
+	width:80%;
+	height:100%;
+	list-style:none;
+	margin-top: 2%;
+	position: relative;
+}
+
+.ac2{
+	font-size: 25px;
+  color: grey;
+  margin-bottom: -40px;
+	margin-left:5%;
+	padding-left: 50px;
+	padding-right: 50px;
+  text-align: center;
+	width:80%;
+	height:100%;
+	list-style:none;
+	margin-top: 5%;
+	position: relative;
+}
+
+.left{
+	height: 50px;
+	width: 55%;
+	float: left;
+}
+
+.right{
+	margin-top: -4%;
+	height: 50px;
+	width: 55%;
+	float: right;
+}
+
 .email{
   color:#233237;
   font-size: 25px;
   font-style: italic;
   text-align:center;
+	font-family: 'Athiti', sans-serif;
 }
 
 .po{
@@ -317,7 +408,7 @@ p {
 	color:#233237
 }
 
-.pageTitle {
+.Title {
   font-size: 6.5em;
   padding-bottom: 15px;
   text-align: center;
