--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ img{
 
 .name {
 	 font-family: 'Athiti', sans-serif; 
-	width:50%;
+	width:10ch;
 	padding-top: -50%;
 	padding-bottom: 50px;
 	padding-left: 5%;
@@ -151,7 +151,6 @@ img{
   font-size: 5em;
   color: white;
   overflow: hidden;
-  border-right: 5px solid orange;
   white-space: nowrap;
   margin: 0 auto;
   letter-spacing: .1em;
